infra/ingress/k8s/docs_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flock-docs

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/deployer"
            backend:
              service:
                name: flock-deployer
                port:
                  number: 9000
          - pathType: Prefix
            path: "/observer"
            backend:
              service:
                name: flock-observer
                port:
                  number: 9001
          - pathType: Prefix
            path: "/resources-server"
            backend:
              service:
                name: flock-resources-server
                port:
                  number: 9002
