infra/ingress/k8s/main_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
  name: flock

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/deployment"
            backend:
              service:
                name: flock-deployer
                port:
                  number: 9000
          - pathType: Prefix
            path: "/config"
            backend:
              service:
                name: flock-deployer
                port:
                  number: 9000
          - pathType: Prefix
            path: "/details"
            backend:
              service:
                name: flock-observer
                port:
                  number: 9001
          - pathType: Prefix
            path: "/metrics"
            backend:
              service:
                name: flock-observer
                port:
                  number: 9001
          - pathType: Prefix
            path: "/logs"
            backend:
              service:
                name: flock-observer
                port:
                  number: 9001
          - pathType: Prefix
            path: "/resource"
            backend:
              service:
                name: flock-resources-server
                port:
                  number: 9002
          - pathType: Prefix
            path: "/kinds"
            backend:
              service:
                name: flock-resources-server
                port:
                  number: 9002
          - pathType: Prefix
            path: "/schemas"
            backend:
              service:
                name: flock-resources-server
                port:
                  number: 9002
          - pathType: Prefix
            path: "/schema"
            backend:
              service:
                name: flock-resources-server
                port:
                  number: 9002
          - pathType: Prefix
            path: "/chat"
            backend:
              service:
                name: flock-proxy
                port:
                  number: 80
