infra/ingress/k8s/redocs_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flock-redoc
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /redoc
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/deployer/redoc"
            backend:
              service:
                name: flock-deployer
                port:
                  number: 9000
          - pathType: Prefix
            path: "/observer/redoc"
            backend:
              service:
                name: flock-observer
                port:
                  number: 9001
          - pathType: Prefix
            path: "/resources-server/redoc"
            backend:
              service:
                name: flock-resources-server
                port:
                  number: 9002
